@@ -5,8 +5,7 @@ include_once 'includes/header.php';
 include_once 'includes/a-menu.php';
 include_once 'includes/a-config.php';
 ?>
-      <title><?= $title ?>: <?= $l_panel ?> - <?= $l_config ?></title>
-      <meta charset="utf-8">
+      <title><?= $l_panel ?> - <?= $l_config ?> | <?=$title?></title>
    </head>
    <body>
    <div class="container">
@@ -25,7 +24,7 @@ include_once 'includes/a-config.php';
                <input type="text" name="wslang" id="wslang" class="form-control" value="<?php echo $config['wslang']; ?>" required/><br>
                <label><?= $l_theme ?> :</label>
                <input type="text" name="wstheme" id="wstheme" class="form-control" value="<?php echo $config['wstheme']; ?>" required/><br>
-               <input type="submit" class="bouton" value="<?= $l_edit ?>" />
+               <input type="submit" class="btn btn-danger btn-lg" value="<?= $l_edit ?>" />
                </form>
             </div>
          </div>
